preparation of order logic, shopping cart, and points system. added token verification handler
